# Agent-RAG-LLM_deploy

./: README.md
agent/: CMakeLists.txt  config.yaml  requirements.txt
agent/include/: agent_context.h  agent_intent.h  agent_zmq_comm.h
agent/src/: __init__.py  agent_context.cc  agent_intent.cc  agent_main.cc  agent_zmq_comm.cc  main.py
agent/src/communication/: llm_client.py  zmq_bridge.py
agent/src/core/: request_orchestrator.py
agent/src/intent/: intent_classifier.py  query_rewriter.py
agent/src/llm/: zmq_llm.py
agent/src/memory/: conversation_memory.py
agent/src/tools/: llm_generate.py  llm_rag_generate.py  rag_search.py  tool_registry.py
agent/tests/: test_intent_classifier.py  test_memory.py  test_tools.py
llm/rknn-llm/examples/DeepSeek-R1-Distill-Qwen-1.5B_Demo/deploy/src/: llm_demo.cpp
lora/: README.md  convert_pipeline.sh  merge_lora.py  prepare_cockpit_data.py
voice/sherpa-onnx/sherpa-onnx/csrc/: sherpa-onnx-microphone.cc
